--- a/Layout1.html
+++ b/Layout1.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initialscale=1.0">
 <title>Document</title>
-<link rel="stylesheet" href="CSS/Lyout1.css">
+<link rel="stylesheet" href="/CSS/Layout1.css">
 <link rel="stylesheet" href="ism/css/my-slider.css">
 <script src="ism/js/ism-2.2.min.js"></script>
 </head>
